2011-01-17  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/47313
	* tree-inline.c (tree_function_versioning): Move DECL_RESULT
	handling before copying the body.  Properly deal with
	by-reference result in SSA form.

	* g++.dg/torture/pr47313.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@168907 138bc75d-0d04-0410-961f-82ee72b054a4